--- a/topics/taking-stock-after-er-models.qmd
+++ b/topics/taking-stock-after-er-models.qmd
@@ -1,5 +1,5 @@
 ---
-title: Catching our collective breaths and taking stock
+title: Taking stock after ER models
 tasl:
     source: fa2023\lectures\lect04-ddl-dml-sqllite-mysql.qmd
     tags:
@@ -8,6 +8,6 @@ tasl:
     topic: Catching our collective breaths and taking stock
 ---
 
-{{< include '_catching-our-collective-breaths-and-taking-stock.qmd' >}}
+{{< include '_taking-stock-after-er-models.qmd' >}}
 
     
