--- a/fa2024/lectures/lecture-06.qmd
+++ b/fa2024/lectures/lecture-06.qmd
@@ -1,7 +1,7 @@
 ---
 date: 9/11/2024
 lecture-id: 6
-title: Relational models
+title: Relational models 2
 ---
 
 ```{python}
@@ -17,17 +17,17 @@ housekeeping_right_column_width="40%"
 housekeeping_vertical_spacer = "25px"
 
 discussion_items = [
-    'This is a placeholder Lecture.'
+    '[Deliverable 5 - pitch video, due Sunday, 9/15](https://virginiacommonwealth.instructure.com/courses/105097/assignments/1021368){target="_blank"}'
 ]
 
 lecture_topics = [
-    'When ready, the complete lecture will replace this one.'
+    '[Relational Models](#relational-models)'
 ]
 ```
 
 {{< include "./_template-lecture-housekeeping.qmd" >}}
 {{< include "./_template-lecture-gantt.qmd" >}}
 
-
+{{< include ../../topics/_relational-models.qmd >}}
 
 {{< include "./_template-lecture-housekeeping.qmd" >}}
