--- a/fa2024/lectures/lecture-07.qmd
+++ b/fa2024/lectures/lecture-07.qmd
@@ -17,17 +17,27 @@ housekeeping_right_column_width="40%"
 housekeeping_vertical_spacer = "25px"
 
 discussion_items = [
-    'This is a placeholder Lecture.'
+    'Homework 3',
+    'Quiz 3'
 ]
 
 lecture_topics = [
-    'When ready, the complete lecture will replace this one.'
+    'Query Languages',
+    'Relational Algebra'
 ]
 ```
 
 {{< include "./_template-lecture-housekeeping.qmd" >}}
 {{< include "./_template-lecture-gantt.qmd" >}}
 
+<!-- query languages serves as a bridge between ER diagrams/relational models and SQL
+The shift occurs when we start talking about records inside tables.
+How do we describe the operations? -->
+{{< include "../../topics/_query-languages.qmd" >}}
+
+<!-- This conversation is more abstract, focusing on the operators and their operations
+and eventually, what it means to records and tables.-->
+{{< include "../../topics/_relational-algebra.qmd" >}}
 
 
 {{< include "./_template-lecture-housekeeping.qmd" >}}
